asm-ingressgateway-classic/base-ingressgateway.yaml
# Copied from https://github.com/GoogleCloudPlatform/anthos-service-mesh-packages/blob/main/samples/gateways/istio-ingressgateway/
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/rev: default
  name: istio-ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway
  namespace: istio-ingress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
  template:
    metadata:
      annotations:
        # This is required to tell Anthos Service Mesh to inject the gateway with the
        # required configuration.
        inject.istio.io/templates: gateway
      labels:
        app: istio-ingressgateway
        istio: ingressgateway
    spec:
      containers:
      - name: istio-proxy
        image: auto # The image will automatically update each time the pod starts.
        resources:
          limits:
            cpu: 2000m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 128Mi
      serviceAccountName: istio-ingressgateway
      # Optional nodeSelector and toleration when using specific node pool for ingress gateways
      # see https://cloud.google.com/kubernetes-engine/docs/how-to/node-taints
      #nodeSelector:
      #  cloud.google.com/gke-nodepool: ingress-pool
      #tolerations:
      #- effect: NoSchedule
      #  key: dedicated
      #  value: istioingress
      #  operator: Equal
