asm-ingressgateway-classic/svc-clusterip.yaml
# Based on https://github.com/GoogleCloudPlatform/anthos-service-mesh-packages/blob/main/samples/gateways/istio-ingressgateway/service.yaml
# Customized service to use ClusterIP instead of external NLB
apiVersion: v1
kind: Service
metadata:
  name: ingressgateway
  namespace: istio-ingress
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
spec:
  ports:
  # status-port exposes a /healthz/ready endpoint that can be used with Ingress or Gateway health checks
  - name: status-port
    port: 15021
    protocol: TCP
    targetPort: 15021
  # Any ports exposed in Gateway resources should be exposed here.
  # See also https://istio.io/latest/docs/ops/configuration/traffic-management/protocol-selection/
  - name: http
    appProtocol: http
    port: 80
  - name: https
    appProtocol: https
    port: 443
  selector:
    istio: ingressgateway
    app: istio-ingressgateway
  type: ClusterIP
